[workspace]
members = ["kitchen"]
resolver = "3"

[workspace.dependencies]
headers = "0.4.0"
html-escape = "0.2.13"
iso8601 = { version = "0.6.2", features = ["serde"] }
reqwest = "0.12.15"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
